--- a/tusk/pom.xml
+++ b/tusk/pom.xml
@@ -8,6 +8,10 @@
   <name>tusk Maven Webapp</name>
   <url>http://maven.apache.org</url>
   
+<!-- shilpa Hemraj -->
+
+<!-- maven  -->
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -22,15 +26,6 @@
     <artifactId>spring-webmvc</artifactId>
     <version>4.3.7.RELEASE</version>
 </dependency>
-
-
-    <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
-<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-tx</artifactId>
-    <version>4.3.7.RELEASE</version>
-</dependency>
-    
     
     <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 <dependency>
@@ -39,28 +34,38 @@
     <version>5.2.9.Final</version>
 </dependency>
     
-    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-<dependency>
-    <groupId>mysql</groupId>
-    <artifactId>mysql-connector-java</artifactId>
-    <version>5.1.39</version>
-</dependency>
-    
-<!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
-<dependency>
-    <groupId>com.mchange</groupId>
-    <artifactId>c3p0</artifactId>
-    <version>0.9.5.2</version>
-</dependency>
-
-<!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-orm</artifactId>
     <version>4.3.7.RELEASE</version>
 </dependency>
-
- </dependencies>
+    
+    
+    <!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
+<dependency>
+    <groupId>com.mchange</groupId>
+    <artifactId>c3p0</artifactId>
+    <version>0.9.5.2</version>
+</dependency>
+    
+  <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-tx</artifactId>
+    <version>4.3.7.RELEASE</version>
+</dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+    
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>9.4.1212</version>
+</dependency>
+    
+  </dependencies>
   <build>
     <finalName>tusk</finalName>
   </build>
